force-app/main/default/objects/Available_Slot__c/Available_Slot__c.object-meta.xml
<CustomObject>
    <label>Available Slot</label>
    <nameField>
        <displayFormat>SLOT-{00000}</displayFormat>
        <label>Slot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Available Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>