force-app/main/default/objects/Available_Slot__c/fields/Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Reference</label>
    <referenceTo>Test_Drive__c</referenceTo>
    <relationshipLabel>Available Slots</relationshipLabel>
    <relationshipName>Available_Slots</relationshipName>
    <type>Lookup</type>
</CustomField>