force-app/main/default/objects/Available_Slot__c/fields/Dealership__c.field-meta.xml
<CustomField>
    <fullName>Dealership__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dealership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Available Slots</relationshipLabel>
    <relationshipName>Available_Slots</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>