force-app/main/default/objects/Available_Slot__c/fields/Is_Booked__c.field-meta.xml
<CustomField>
    <fullName>Is_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Booked</label>
    <type>Checkbox</type>
</CustomField>