force-app/main/default/objects/Available_Slot__c/fields/Slot_Date__c.field-meta.xml
<CustomField>
    <fullName>Slot_Date__c</fullName>
    <label>Slot Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>