force-app/main/default/objects/Available_Slot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dealership__c</columns>
    <columns>Slot_Date__c</columns>
    <columns>Slot_Time__c</columns>
    <columns>Is_Booked__c</columns>
    <columns>Booking_Reference__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Available Slots</label>
</ListView>